syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.CrossChain";

service CrossChainContract {
    option (aelf.csharp_state) = "AElf.Contracts.CrossChain.CrossChainContractState";
    // Actions
    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }
    rpc RequestChainCreation (SideChainCreationRequest) returns (RequestChainCreationOutput) {
    }
    rpc WithdrawRequest (aelf.SInt32Value) returns (google.protobuf.Empty) {
    }
    rpc CreateSideChain (aelf.SInt32Value) returns (aelf.SInt32Value) {
    }
    rpc Recharge (RechargeInput) returns (google.protobuf.Empty) {
    }
    rpc RequestChainDisposal (aelf.SInt32Value) returns (aelf.Hash) {
    }
    rpc DisposeSideChain (aelf.SInt32Value) returns (aelf.SInt64Value) {
    }
    rpc RecordCrossChainData (CrossChainBlockData) returns (google.protobuf.Empty) {
    }
    
    rpc ChangOwnerAddress(aelf.Address) returns (google.protobuf.Empty) {
    }

    // Views
    rpc VerifyTransaction (VerifyTransactionInput) returns (google.protobuf.BoolValue) {
        option (aelf.is_view) = true;
    } 
    rpc CurrentSideChainSerialNumber (google.protobuf.Empty) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc LockedToken (aelf.SInt32Value) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc LockedAddress (aelf.SInt32Value) returns (aelf.Address) {
        option (aelf.is_view) = true;
    }
    rpc GetChainStatus (aelf.SInt32Value) returns (aelf.SInt32Value) {
        option (aelf.is_view) = true;
    }
    rpc GetSideChainHeight (aelf.SInt32Value) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetParentChainHeight (google.protobuf.Empty) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetParentChainId (google.protobuf.Empty) returns (aelf.SInt32Value) {
        option (aelf.is_view) = true;
    }
    rpc LockedBalance (aelf.SInt32Value) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetSideChainIdAndHeight (google.protobuf.Empty) returns (SideChainIdAndHeightDict) {
        option (aelf.is_view) = true;
    }
    rpc GetAllChainsIdAndHeight (google.protobuf.Empty) returns (SideChainIdAndHeightDict) {
        option (aelf.is_view) = true;
    }
    rpc GetIndexedCrossChainBlockDataByHeight (aelf.SInt64Value) returns (CrossChainBlockData) {
        option (aelf.is_view) = true;
    }
    rpc GetBoundParentChainHeightAndMerklePathByHeight (aelf.SInt64Value) returns (CrossChainMerkleProofContext) {
        option (aelf.is_view) = true;
    }
    rpc GetChainInitializationContext(aelf.SInt32Value) returns (ChainInitializationContext){
        option (aelf.is_view) = true;
    }
}

message InitializeInput {
    aelf.Hash tokenContractSystemName = 1;
    aelf.Hash consensusContractSystemName = 2;
    aelf.Hash parliamentContractSystemName = 3;
    int32 parentChainId = 4;
}

message RechargeInput {
    int32 chainId = 1;
    sint64 amount = 2;
}

message RequestChainCreationOutput{
    int32 chainId =1;
    aelf.Hash proposalId = 2;
}

message VerifyTransactionInput {
    aelf.Hash transactionId = 1;
    repeated aelf.Hash path = 2;
    sint64 parentChainHeight = 3;
    int32 verifiedChainId = 4; 
}

// Events
message CreationRequested
{
    option (aelf.is_event) = true;
    aelf.Address creator = 1;
    int32 chainId = 2;
}

message Disposed
{
    option (aelf.is_event) = true;
    int32 chainId = 1;
}

message SideChainCreationRequest {
    int64 indexingPrice = 1;
    int64 lockedTokenAmount = 2;
    repeated ResourceTypeBalancePair resourceBalances = 3;
    bytes contractCode = 4;
}

message SideChainInfo {
    SideChainCreationRequest sideChainCreationRequest = 1;
    aelf.Address Proposer = 2;
    SideChainStatus SideChainStatus = 3;
    int32 SideChainId = 4;
    aelf.Hash ProposalHash = 5;
    google.protobuf.Timestamp CreatedTime = 6;
    int64 ParentChainHeightOfCreation = 7;
}

// from crosschain.proto

message SideChainBlockData {
    int64 SideChainHeight = 1;
    aelf.Hash BlockHeaderHash = 2;
    aelf.Hash TransactionMerkleTreeRoot = 3;
    int32 SideChainId = 4;
}

message IndexedSideChainBlockDataResult {
    int64 Height = 1;
    aelf.Address Miner = 2;
    repeated SideChainBlockData SideChainBlockData = 3;
}

message ParentChainBlockData {
    ParentChainBlockRootInfo Root = 1;

    // Indexed block height from side chain and merkle path for this side chain block
    map<int64, MerklePath> IndexedMerklePath = 2;
    map<string, bytes> ExtraData = 3;
}

message ParentChainBlockRootInfo
{
    int64 ParentChainHeight = 1;
    CrossChainExtraData CrossChainExtraData = 2;
    int32 ParentChainId = 3;
    aelf.Hash TransactionStatusMerkleRoot = 4;
}

message CrossChainExtraData{
    // Merkle tree root of side chain block headers
    aelf.Hash SideChainBlockHeadersRoot = 2;

    // Merkle tree root of side chain block transaction roots
    aelf.Hash SideChainTransactionsRoot = 3;

    // more
}

enum SideChainStatus
{
    Apply = 0;
    Review = 1;
    Active = 2;
    InsufficientBalance = 3;
    Terminated = 4;
}

message SideChainIdAndHeightDict{
    map<int32, int64> IdHeightDict = 1;
}

message CrossChainBlockData {
    repeated SideChainBlockData SideChainBlockData = 1;
    repeated ParentChainBlockData ParentChainBlockData = 2;
    int64 PreviousBlockHeight = 3;
}

message MerklePath {
    repeated aelf.Hash Path = 1;
}

message CrossChainMerkleProofContext{
    int64 BoundParentChainHeight = 1;
    MerklePath MerklePathForParentChainRoot = 2;
}

message ChainInitializationContext{
    int32 chainId =1;
    aelf.Address Creator = 2;
    google.protobuf.Timestamp CreatedTime = 3;
    repeated bytes ExtraInformation = 4;
    int64 ParentChainHeightOfCreation = 5;
}

// from resource.proto

enum ResourceType
{
    UndefinedResourceType = 0;
    Ram = 1;
    Cpu = 2;
    Net = 3;
}

message ResourceTypeBalancePair{
    ResourceType Type = 1;
    uint64 Amount = 2;
}
